# client-python

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: python-publish.yml
examples/: env.orig.py  example_auth.py  example_me.py
tests/: __init__.py
tests/unit/: __init__.py
tests/unit/whaller_client/: __init__.py  test_api.py  test_auth.py  test_client.py  test_exceptions.py  test_logger.py
tests/unit/whaller_client/endpoints/: __init__.py  test_box.py  test_invitation.py  test_me.py  test_upload.py
whaller_client/: __init__.py  api.py  auth.py  client.py  exceptions.py  logger.py
whaller_client/endpoints/: box.py  invitation.py  me.py  upload.py
