[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whaller-client"
version = "0.1.1"
description = "SDK Python pour interagir avec l'API Whaller"
authors = [
    {name = "Thomas Fauré", email = "thomas.faure@whaller.com"},
    {name = "Alexandre Pinsard", email = "alexandre.pinsard@whaller.fr"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests"
]

[tool.setuptools]
packages = ["whaller_client"]

[project.urls]
Homepage = "https://github.com/whallerfr/client-python"
Repository = "https://github.com/whallerfr/client-python"
Issues = "https://github.com/whallerfr/client-python/issues"
