[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whaller-client"
version = "0.1.3"
description = "Python SDK for interacting with the Whaller API"
authors = [
    {name = "Thomas Fauré", email = "thomas.faure@whaller.com"},
    {name = "Alexandre Pinsard", email = "alexandre.pinsard@whaller.fr"},
    {name = "Erwan de Ferrières", email = "erwan.de-ferrieres@whaller.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests"
]

[tool.setuptools]
packages = ["whaller_client"]

[project.urls]
Homepage = "https://github.com/whallerfr/client-python"
Repository = "https://github.com/whallerfr/client-python"
Issues = "https://github.com/whallerfr/client-python/issues"
